--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="menu hidden">
-    <i class="fa-solid fa-xmark" style="color: #ff0000;"></i>
+    <i class="fa-solid fa-xmark" style="color: #d90000;"></i>
     <div class="text">
     <h1 class="menutitle">Menu by Siks</h1><br>
     <a href="#">Home</a>
